updated storeservice, new create product and create store pages

--- a/apps/frontend/Pages/Merchant/Pages/CreateStore.razor
+++ b/apps/frontend/Pages/Merchant/Pages/CreateStore.razor
@@ -1,6 +1,5 @@
-@page "/merchant/createstore"
+@page "/merchant/stores/create"
 @layout MerchantLayout
-
 @attribute [Authorize(Roles = "merchant")]
 
 <CreateStoreForm />
