--- a/apps/frontend/Pages/Merchant/_Imports.razor
+++ b/apps/frontend/Pages/Merchant/_Imports.razor
@@ -6,4 +6,5 @@
 @using frontend.Pages.Shared.Components.InvoiceFilters
 @using frontend.Pages.Shared.Components.NotificationItem
 @using frontend.Pages.Shared.Components.Modals
+@using frontend.Pages.Shared.Components.Merchant
 @using frontend.Pages.Merchant.LiveMap
