--- a/apps/frontend/Pages/Shared/Sidebars/Sidebar.razor
+++ b/apps/frontend/Pages/Shared/Sidebars/Sidebar.razor
@@ -143,6 +143,7 @@ new("Create User", "/merchant/createuser", "user-plus")
     private List<SidebarMenuItem> MerchantStores => new()
 {
 new("Create Store", "/merchant/stores/create", "create-store"),
+new("All Stores", "/merchant/stores", "store"),
 new("Map", "/merchant/map", "map")
 };
 
